--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Know the time now here or anywhere in the world.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
+    <meta name="google-site-verification" content="a0EXoF96xSz9CFQgj6CRn0nyxVQIPC25d8t51F4HuNI" />
     <title>Timer</title>
 </head>
 <body>
